--- a/css/styles.css
+++ b/css/styles.css
@@ -171,19 +171,19 @@ h2,h3{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 188px 0;
+    padding: 72px 0;
 
     max-width: 1440px;
     margin: 0 auto;
 }
 .efective-solutions-title{
     max-width: 496px;
-    font-size: 56px;
+    font-size: 36px;
     letter-spacing: 0.02em;
     text-align: center;
-    line-height: 1.07;
+    line-height: 1.11;
 
-    margin: 0 auto 48px;
+    margin: 0 auto 72px;
 }
 .efective-solutions-button{
     background-color: #4D5AE5;
@@ -216,7 +216,15 @@ h2,h3{
 
 .core-values-list{
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 72px;
+
+    align-items: center;
+    justify-content: center;
+}
+.core-values-list-item {
+    flex-shrink: 0;
 }
 .core-values-list-box{
     background-color: #F4F4FD;
@@ -233,10 +241,6 @@ h2,h3{
     fill: #000;
     margin: 24px 100px;
 }
-.core-values-list-item{
-    flex-basis: calc((100% - 24px * 3)/4);
-    flex-shrink: 0;
-}
 
 /* || Team */
 
@@ -248,13 +252,15 @@ h2,h3{
     gap: 72px;
     flex-direction: column;
     flex-wrap: wrap;
+
+    justify-content: center;
+    align-items: center;
 }
 .team-list-item{
+    max-width: 264px;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-
-    max-width: 264px;
 }
 
 .team-list-container{
@@ -307,12 +313,11 @@ h2,h3{
 
 .portfolio-list{
     display: flex;
-    row-gap: 48px;
-    column-gap: 24px;
+    gap: 48px;
+    flex-direction: column;
     flex-wrap: wrap;
 }
 .portfolio-list-item{
-    width: calc((100% - 48px) / 3);
     flex-shrink: 0;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -692,12 +697,40 @@ h2,h3{
     .container {
         max-width: 768px;
     }
+
+    .efective-solutions-section {
+        padding: 112px 0;
+    }
+    .efective-solutions-title {
+        font-size: 56px;
+        letter-spacing: 0.02em;
+        line-height: 1.07;
+    
+        margin: 0 auto 36px;
+    }
+
+    .core-values-list{
+        flex-direction: row;
+        gap: 72px 24px;
+    }
+    .core-values-list-item {
+        flex-basis: calc((100% - 24px)/2);
+    }
+
     .team-list {
         gap: 64px 24px;
         flex-direction: row;
     }
     .team-list-item {
         flex-basis: calc((100% - 24px)/2);
+    }
+
+    .portfolio-list{
+        gap: 72px 24px;
+        flex-direction: row;
+    }
+    .portfolio-list-item{
+        width: calc((100% - 24px) / 2);
     }
 }
 
@@ -707,7 +740,29 @@ h2,h3{
     .container {
         max-width: 1158px;
     }
+
+    .efective-solutions-section {
+        padding: 188px 0;
+    }
+    .efective-solutions-title {
+        margin: 0 auto 48px;
+    }
+
+    .core-values-list{
+        flex-wrap: nowrap;
+    }
+    .core-values-list-item {
+        flex-basis: calc((100% - 24px*3)/4);
+    }
+    
     .team-list-item {
         flex-basis: calc((100% - 24px * 3)/4);
+    }
+
+    .portfolio-list{
+        gap: 48px 24px;
+    }
+    .portfolio-list-item{
+        width: calc((100% - 48px) / 3);
     }
 }
